src/styles.scss
// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@use '@angular/material' as mat;
// Plus imports for other components in your app.

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
@include mat.core();

// Define the palettes for your theme using the Material Design palettes available in palette.scss
// (imported above). For each palette, you can optionally specify a default, lighter, and darker
// hue. Available color palettes: https://material.io/design/color/
$sledztwo-primary: mat.define-palette(mat.$indigo-palette);
$sledztwo-accent: mat.define-palette(mat.$yellow-palette, A700, A400, A200);

// The warn palette is optional (defaults to red).
$sledztwo-warn: mat.define-palette(mat.$red-palette);

// Create the theme object. A theme consists of configurations for individual
// theming systems such as "color" or "typography".
$sledztwo-theme: mat.define-dark-theme((
  color: (
    primary: $sledztwo-primary,
    accent: $sledztwo-accent,
    warn: $sledztwo-warn,
  )
));

// Include theme styles for core and each component used in your app.
// Alternatively, you can import and @include the theme mixins for each component
// that you are using.
@include mat.all-component-themes($sledztwo-theme);

/* You can add global styles to this file, and also import other style files */

html, body { height: 100vh; overflow: hidden; }
body {
  margin: 0;
  font-family: 'Lato', sans-serif;
  font-weight: 400;
  background-color: #282828;
}

.mat-dialog-container {
  max-width: 100vw !important;
}

